fix: keep some gap between buttons and name

--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -221,6 +221,7 @@ select option {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
 
     .result-card-btns {
+      padding-left: 5px;
       margin-left: auto;
       display: flex;
       gap: 5px;
